--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ osx_image: xcode9.3
 language: swift
 xcode_project: NearBy.xcodeproj
 xcode_sdk: iphonesimulator
-script: xcodebuild
+script:
+- xcodebuild test -workspace NearBy/NearBy.xcodeproj -scheme "NearBy" -sdk iphonesimulator -destination "paltform=iOS Simulator,OS=9.3,name=iphone8" ONLY_ACTIVE_ARCH=NO CODE_SIGNING_REQUIRED=NO
+
